cmake_minimum_required (VERSION 3.8)

project (TCP_Server VERSION 1.0.0 LANGUAGES CXX)

list (APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
include (platform)
include (util)

set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_EXTENSIONS OFF)

set (FOLDER_NAME ${ARCH}-${CMAKE_BUILD_TYPE})

set (CMAKE_BINARY_DIR ${CMAKE_CURRENT_LIST_DIR}/build/${FOLDER_NAME})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/build/${FOLDER_NAME})
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/build/${FOLDER_NAME}/lib)
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/build/${FOLDER_NAME}/lib)

if (CMAKE_SYSTEM_NAME MATCHES "Linux")
	find_package (Threads REQUIRED)
endif ()

set_property (GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory (server)